[package]
name = "mini-graphml"
version = "0.1.0"
edition = "2024"
description = "Minimal parser of graphml files. Can only parse very simple graphs. STill workin in progress"
categories = ["parser", "graphml"]
authors = ["Romain Giot <romain.giot@-bordeaux.fr>"]


[dependencies]
glob = "0.3.2"
indexmap = {version="2.7.1", features = ["serde"]}
petgraph = {version="0.7.1", optional = true}
quick-xml = {version="0.37.2", features=["serialize"]}
serde = {version="1.0.218", features=["derive"]}


[dev-dependencies]
ureq = "3.0.6"
tar = "0.4.43"
flate2 = "1.0.35"

[features]
petgraph = ["dep:petgraph"]
